Project Edit UI Development

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -1550,13 +1550,8 @@ tmpl-footer {
 		}
 
 		.view-footer-container {
-			position: absolute;
-			bottom: 0;
-			left: 0;
-			right: 0;
+			flex: 0 0 auto;
 			padding: 2rem;
-			background: rgba(255, 255, 255, 0.8);
-			border-top: 1px solid #DDD;
 		}
 	}
 }
@@ -2647,6 +2642,25 @@ $file-browser-item-active: #2b5580;
 
 /* FORM CONTROLS
 ------------------------------ */
+form {
+	section {
+		margin-bottom: 2rem;
+		padding-bottom: 1rem;
+		border-bottom: 1px solid #DDD;
+	}
+	
+	.help-block {
+		margin-top: 0.5rem;
+		margin-bottom: 0;
+		font-size: 1.2rem;
+	}
+}
+
+textarea {
+	resize: vertical;
+}
+
+
 .form-validation-msg {
 	margin-left: 0.25rem;
 	font-size: 1.2rem;
@@ -2674,53 +2688,9 @@ $file-browser-item-active: #2b5580;
 	margin-bottom: 2rem;
 }
 
-form {
-	section {
-		margin-bottom: 2rem;
-		padding-bottom: 1rem;
-		border-bottom: 1px solid #DDD;
-	}
-	
-	.help-block {
-		margin-top: 0.5rem;
-		margin-bottom: 0;
-		font-size: 1.2rem;
-	}
-}
-
 .form-footer {
-	margin-top: 2rem;
-	padding-top: 2rem;
+	padding-top: 1.5rem;
 	border-top: 1px solid #DDD;
-	
-	.btn {
-		min-width: 8rem;
-	}
-
-	.btn + .btn {
-		margin-left: 0.5rem;
-	}
-
-	&.fixed {
-		position: fixed;
-		left: 17rem;
-		right: 0;
-		bottom: 4rem;
-		padding: 1.5rem 2rem;
-		background: #f7f8fa;
-		border-top: 1px solid #EEE;
-		box-shadow: 0 0 4px #CCC;
-	}
-}
-
-.form-footer.no-border {
-	margin-top: 0;
-	padding-top: 0;
-	border: none;
-}
-
-textarea {
-	resize: vertical;
 }
 
 .form-control-static {
@@ -3100,7 +3070,7 @@ $nav-tab-active: #1a5a96;
 
 		> a {
 			padding: 0.5rem 1.5rem;
-			font-size: 1.4rem;
+			font-size: 1.6rem;
 			font-weight: bold;
 			color: $nav-tab-inactive-color;
 			border: none;
@@ -3183,6 +3153,8 @@ $table-footer-bg: #F7F8FA;
 		padding-left: 1.5rem;
 	}
 
+	> tbody > tr > td:first-child
+
 	tr {
 		background: $table-row-bg;
 	}
@@ -3210,6 +3182,17 @@ $table-footer-bg: #F7F8FA;
 				border-color: $btn-focus-border-color;
 			}
 		}
+	}
+
+	.select-col {
+		position: relative;
+		padding-left: 3.5rem;
+
+		input[type="checkbox"] {
+			position: absolute;
+			top: 1rem;
+			left: 1rem;
+		}	
 	}
 	
 	.action-x1 {
@@ -4650,16 +4633,6 @@ section.project-info {
 }
 
 
-/* SELECT TOPIC MODAL VIEW
------------------------------ */
-.select-topic-modal {
-	.select-col {
-		width: 5rem;
-		text-align: center;
-	}
-}
-
-
 /* SIGN IN VIEW
 ------------------------------ */
 .sign-in-view {
@@ -4836,6 +4809,19 @@ tmpl-template-render {
 .vc-chooser-view {
 	.list-group {
 		margin-bottom: 0;
+	}
+}
+
+.add-valued-component-table {
+	td.select-col {
+		position: relative;
+		padding-left: 3.5rem;
+
+		input[type="checkbox"] {
+			position: absolute;
+			top: 1rem;
+			left: 1rem;
+		}
 	}
 }
 
