--- a/modules/vcs/client/views/topic-modal-select.html
+++ b/modules/vcs/client/views/topic-modal-select.html
@@ -1,33 +1,30 @@
 
-<div class="select-topic-modal">
-
-	<div class="modal-header">
-		<h3 class="modal-title">Add Valued Component(s)</h3>
-	</div>
-	<div class="modal-body">
-		<section class="panel panel-default">
-			<table ng-table="self.tableParams" show-filter="self.showFilter" class="table table-condensed table-hover table-striped">
-				<tr ng-repeat="o in $data">
-					<td class="select-col" header-class="'select-col'">
-						<input type="checkbox" ng-click="self.toggleItem(o)"/>
-					</td>
-					<td data-title="'Pillar'"
-						sortable="'pillar'"
-						filter="{'pillar':'select'}"
-						filter-data="self.pillars">{{o.pillar}}</td>
-					<td data-title="'Name'"
-						sortable="'name'"
-						filter="{ 'name':'text'}">{{o.name}}</td>
-				</tr>
-			</table>
-		</section>
-	</div>
-
-	<div class="modal-footer">
-		<div>
-			<button class="btn btn-default" href ng-click="self.cancel()">Cancel</button>
-			<button class="btn btn-default" href ng-click="self.ok()">Ok</button>
-		</div>
-	</div>
-	
+<div class="modal-header">
+	<button class="btn btn-default close" ng-click="s.cancel()"><span aria-hidden="true">×</span></button>
+	<h3 class="modal-title">Add Valued Component(s)</h3>
 </div>
+
+<div class="modal-body">
+	<section class="panel panel-default">
+		<table class="table add-valued-component-table" ng-table="self.tableParams" show-filter="self.showFilter">
+			<tr ng-repeat="o in $data">
+				<td class="select-col" header-class="'select-col'"
+					data-title="'Name'"
+					sortable="'name'"
+					filter="{'name':'text'}"><input type="checkbox" ng-click="self.toggleItem(o)"/>{{o.name}}</td>
+				<td data-title="'Pillar'"
+					sortable="'pillar'"
+					filter="{'pillar':'select'}"
+					filter-data="self.pillars">{{o.pillar}}</td>
+			</tr>
+		</table>
+	</section>
+</div>
+
+<div class="modal-footer">
+	<div>
+		<button class="btn btn-default" href ng-click="self.cancel()">Cancel</button>
+		<button class="btn btn-primary" href ng-click="self.ok()">Ok</button>
+	</div>
+</div>
+	
