Commenting out tabs instead of using the 'hidden' selector

--- a/modules/projects/client/views/project-partials/project.entry.html
+++ b/modules/projects/client/views/project-partials/project.entry.html
@@ -20,15 +20,19 @@
 			<li role="presentation" ng-class="{'active':form.curTab === 'Project Contacts'}">
 				<a href ng-click="form.curTab = 'Project Contacts'" title="Edit Project Contacts">Contacts</a>
 			</li>
-			<li class="" role="presentation" ng-class="{'active':form.curTab === 'Project EAO Info'}">
+
+			<!--
+			<li role="presentation" ng-class="{'active':form.curTab === 'Project EAO Info'}">
 				<a href ng-click="form.curTab = 'Project EAO Info'" title="Edit Environmental Assessment Office Info">EAO Details</a>
 			</li>
-			<li class="hidden" role="presentation" ng-class="{'active':form.curTab === 'Proponent Info'}">
+			<li role="presentation" ng-class="{'active':form.curTab === 'Proponent Info'}">
 				<a href ng-click="form.curTab = 'Proponent Info'" title="Edit Environmental Assessment Office Info">Proponent</a>
 			</li>
-			<li class="hidden" role="presentation" ng-class="{'active':form.curTab === 'Intake Profile'}">
+			<li role="presentation" ng-class="{'active':form.curTab === 'Intake Profile'}">
 				<a href ng-click="form.curTab = 'Intake Profile'" title="Edit Environmental Assessment Office Info">Intake Profile</a>
 			</li>
+			-->
+
 		</ul><!-- / TABS -->
 
 		<div class="edit-project-form tab-pane active" ng-show="form.curTab === 'Project Details'">
