ESM-409 scrolling fix
Forgot to save file before push.

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -3561,7 +3561,7 @@ $nav-tab-active: #1a5a96;
 }
 
 .public-comment-period-view {
-	/* Fix - We need to absolutely position this because of the inception of DIV's required here - this needs to be re-engineered at some point */
+	/* Fix - We need to absolutely position this because of the inception of DIV's required here */
 	position: absolute;
 	top: 0;
 	right: 0;
