--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -76,6 +76,12 @@ $table-head-bg: 			#F7F8FA;
 $table-filter-bg: 			#FFF;
 $table-footer-bg: 			#F7F8FA;
 
+$ng-table-page-btn-font-size: 			1.2rem;
+$ng-table-page-btn-font-weight: 		bold;
+$ng-table-page-btn-active-color: 		#FFF;
+$ng-table-page-btn-border-color: 		#CCC;
+$ng-table-page-btn-hover-border-color: 	#8C8C8C;
+
 /* Tab Navigation */
 $nav-tab-active-color:			#1a5a96;
 $nav-tab-inactive-color:		#999;
@@ -108,15 +114,22 @@ $warning-border:			#eea236;
 
 /* GLOBAL
 ------------------------------ */
+html, body {
+	height: 100%;
+	overflow-y: hidden;
+}
+
 html {
 	min-height: 100%;
-	background: $app-bg;
 }
 
 body {
+	padding: 0;
 	min-height: 100%;
+	font-family: $font-family-sans-serif;
 	font-size: 1.4rem;
 	color: $app-base-color;
+	background: $app-bg;
 	-ms-overflow-style: scrollbar;
 }
 
@@ -127,6 +140,30 @@ hr {
 
 /* UTILITY SELECTORS
 ------------------------------ */
+[ng\:cloak],
+[ng-cloak], 
+[data-ng-cloak], 
+[x-ng-cloak], 
+.ng-cloak, 
+.x-ng-cloak {
+  display: none !important;
+}
+
+pre {
+	padding: 0;
+	margin: 0;
+	font-size: inherit;
+	font-family: $font-family-sans-serif;
+	line-height: inherit;
+	background-color: transparent;
+	border: 0;
+	white-space: pre-wrap;       /* CSS 3 */
+	white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+	white-space: -pre-wrap;      /* Opera 4-6 */
+	white-space: -o-pre-wrap;    /* Opera 7 */
+	word-break: normal;
+}
+
 .flex-row {
 	display: -webkit-flex;
 	display: flex;
@@ -141,17 +178,12 @@ hr {
 	flex-flow: column nowrap;
 }
 
-.placeholder-value {
-	color: $placeholder-value-color;
+.no-margin {
+	margin: 0;
 }
 
-[ng\:cloak],
-[ng-cloak], 
-[data-ng-cloak], 
-[x-ng-cloak], 
-.ng-cloak, 
-.x-ng-cloak {
-  display: none !important;
+.placeholder-value {
+	color: $placeholder-value-color;
 }
 
 .btn-list .btn {
@@ -176,13 +208,6 @@ hr {
 .well > h5,.panel-body h5:first-child {
 	margin-top: 0;
 	margin-bottom: 20px;
-}
-
-.panel-body.news-headline h5:first-child {
-	margin-bottom: 10px;
-}
-.panel-body.news-headline h5 {
-	margin-bottom: 0;
 }
 
 .news-content {
@@ -249,39 +274,9 @@ th > .progress {
 	margin-bottom: 0;
 }
 
-pre {
-	padding: 0;
-	margin: 0;
-	font-size: inherit;
-	font-family: $font-family-sans-serif;
-	line-height: inherit;
-	background-color: transparent;
-	border: 0;
-	white-space: pre-wrap;       /* CSS 3 */
-	white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
-	white-space: -pre-wrap;      /* Opera 4-6 */
-	white-space: -o-pre-wrap;    /* Opera 7 */
-	word-break: normal;
-}
-
 ul > li > h3 {
 	margin-top: 5px;
 }
-
-h3 .small {
-	padding-top: 10px;
-	font-size: 60%;
-}
-
-h3 .small .label {
-	font-weight: 500;
-}
-
- .col-0 {
- 	width: 0;
- 	margin: 0;
- 	overflow: hidden;
- }
 
  
 // -------------------------
@@ -291,21 +286,8 @@ h3 .small .label {
 /* Workaround for unwanted route changes due to empty href attributes - see http://angular-ui.github.io/bootstrap/ */
 .nav, .pagination, .carousel, .panel-title a, .clickable { cursor: pointer; }
 
-.undecorated-link:hover {
-	text-decoration: none;
-}
-
 .vertical-scroll ul.list-indent-left {
 	min-height: 400px;
-}
-
-.no-lower-padding {
-	padding-bottom: 0 !important;
-}
-
-.no-side-padding {
-	padding-left: 0;
-	padding-right: 0;
 }
 
 .vertical-scroll,
@@ -531,10 +513,6 @@ a.return-link:hover {
 
 .table-no-head > tbody > tr:first-child > td {
 	border-top: none;
-}
-
-.no-margins {
-	margin: 0;
 }
 
 th .progress-bar {
@@ -796,30 +774,6 @@ h3.panel-title {
 	border-right: 5px solid white;
 }
 
-.user-quick-links h1 {
-	padding: 0;
-	margin: 0;
-}
-
-.user-quick-links a {
-	color: #fff;
-}
-
-.user-quicklinks a.thumbnail {
-	position: relative;
-	font-size: 12px;
-	height: 80px !important;
-}
-.user-quicklinks a.thumbnail .caption {
-	padding: 0;
-	position: absolute;
-	bottom: 3px;
-	left: 3px;
-}
-.user-quick-links a:hover {
-	text-shadow: 0 0 20px rgba(255,255,255,0.4);
-}
-
 .bucket-content-activity {
 	font-size: 85%;
 	border-top: 1px solid #ccc;
@@ -940,10 +894,6 @@ h3.activity-title {
 // MODALS...
 // -------------------------
 
-.modal-pre-table {
-	padding-top: 5px;
-	padding-bottom: 0;
-}
 .table-modal {
 	margin-bottom: 0
 }
@@ -980,7 +930,6 @@ h3.activity-title {
 // -------------------------
 // HEADER...
 // -------------------------
-
 .header-profile-image {
 	opacity: 0.8;
 	height: 28px;
@@ -995,13 +944,6 @@ a:hover .header-profile-image {
 .user-header-dropdown-toggle {
 	padding-top: 11px !important;
 	padding-bottom: 11px !important;
-}
-
-/* Move down content because we have a fixed navbar that is 50px tall */
-body {
-	padding-top: 0;
-	background-color: transparent;
-	font-family: $font-family-sans-serif;
 }
 
 .navbar-sm .form-control {
@@ -1492,11 +1434,6 @@ h2.page-title {
 
 /* APPLICATION LAYOUT 
 ------------------------------ */
-html, body {
-	height: 100%;
-	overflow-y: hidden;
-}
-
 .app-container {
 	position: absolute;
 	top: 0;
@@ -1582,7 +1519,7 @@ ui-view {
 }
 
 
-/* PAGE LAYOUT
+/* PAGE (VIEW) CONTAINERS
 ------------------------------ */
 .view-title-container {
 	height: 7rem;
@@ -3127,7 +3064,7 @@ $nav-tab-active: #1a5a96;
 }
 
 
-/* TABLE
+/* TABLES
 ------------------------------ */
 .table-th {
 	padding-top: 1rem;
@@ -3143,12 +3080,24 @@ $nav-tab-active: #1a5a96;
 	table-layout: fixed;
 	background: $table-bg;
 
+	&.table-striped {
+		> tbody > tr:nth-of-type(odd) {
+			background-color: #f7f8fa;
+		}	
+	}
+
+	&.table-hover {
+		> tbody > tr:hover {
+			background-color: $table-row-hover-bg;
+		}
+	}
+
 	> thead > tr > th {
 		@extend .table-th
 	}
 	
-	> thead > tr > th:first-child,
-	> tbody > tr > td:first-child {
+	th:first-child,
+	td:first-child {
 		padding-left: 1.5rem;
 	}
 
@@ -3176,18 +3125,6 @@ $nav-tab-active: #1a5a96;
 			}
 		}
 	}
-
-	&.table-striped {
-		> tbody > tr:nth-of-type(odd) {
-			background-color: #f7f8fa;
-		}	
-	}
-
-	&.table-hover {
-		> tbody > tr:hover {
-			background-color: $table-row-hover-bg;
-		}
-	}
 	
 	.action-x1 {
 		width: 4.5rem;
@@ -3209,19 +3146,6 @@ $nav-tab-active: #1a5a96;
 	}
 }
 
-.ng-table-page-btn {
-	font-size: 1.2rem;
-	font-weight: bold;
-	color: $app-base-color;
-	border: 1px solid #CCC;
-}
-
-.ng-table-page-btn-active {
-	color: #FFF;
-	background: $btn-primary-bg;
-	border-color: $btn-primary-bg;
-}
-
 .ng-table-sort-header {
 	th {
 		@extend .table-th;
@@ -3241,6 +3165,19 @@ $nav-tab-active: #1a5a96;
 	}
 }
 
+.ng-table-page-btn {
+	font-size: $ng-table-page-btn-font-size;
+	font-weight: $ng-table-page-btn-font-weight;
+	color: $app-base-color;
+	border: 1px solid $ng-table-page-btn-border-color;
+}
+
+.ng-table-page-btn-active {
+	color: $ng-table-page-btn-active-color;
+	background: $btn-primary-bg;
+	border-color: $btn-primary-bg;
+}
+
 .ng-table-pager {
 	padding-top: 1.5rem;
 	padding-right: 1.5rem;
@@ -3249,6 +3186,16 @@ $nav-tab-active: #1a5a96;
 	background: $table-footer-bg;
 	border-top: 1px solid #DDD;
 	overflow: auto;
+}
+
+.ng-table-pagination,
+.ng-table-counts {
+	margin-bottom: 1.5rem;
+}
+
+.ng-table-pagination {
+	display: block;
+	float: left;
 }
 
 .ng-table-counts {
@@ -3260,34 +3207,45 @@ $nav-tab-active: #1a5a96;
 	}
 }
 
-.pagination-btn {
-	font-size: 1.2rem;
-	font-weight: bold;
-	color: $app-base-color;
-	border: 1px solid #CCC;
-}
-
-.pagination-btn-active {
-	color: #FFF;
-	background: $btn-primary-bg;
-	border-color: $btn-primary-bg;
-}
-
 .pagination {
-	margin-bottom: 1rem;
-
 	> li > a {
 		@extend .ng-table-page-btn;
 	}
 
 	> li > a:hover {
 		color: $app-base-color;
-		border: 1px solid #8c8c8c;
+		border: 1px solid $ng-table-page-btn-hover-border-color;
 	}
 
 	> .active > a,
 	> .active > a:hover {
 		@extend .ng-table-page-btn-active;
+	}
+}
+
+.table-scroll {
+	table-layout: fixed;
+
+	tr {
+		display: table;
+		table-layout: fixed;
+	}
+
+	thead {
+		tr {
+			width: 100%;
+		}
+	}
+
+	tbody {
+		width: 100%;
+		display: block;
+		overflow-y: scroll;
+		overflow-x: hidden;
+
+		tr {
+			width: calc(100% + 17px)
+		}
 	}
 }
 
@@ -4876,16 +4834,25 @@ tmpl-template-render {
 	}
 }
 
-.add-valued-component-table {
-	td.select-col {
+.add-vc-table {
+	tbody {
+		height: 35rem;
+	}
+
+	td:first-child {
 		position: relative;
-		padding-left: 3.5rem;
+		padding-left: 4rem;
 
 		input[type="checkbox"] {
 			position: absolute;
+			margin: 0;
 			top: 1rem;
-			left: 1rem;
+			left: 1.5rem;
 		}
+	}
+
+	.pillar-col {
+		width: 30%;
 	}
 }
 
