--- a/modules/vcs/client/views/topic-modal-select.html
+++ b/modules/vcs/client/views/topic-modal-select.html
@@ -1,18 +1,17 @@
 
 <div class="modal-header">
-	<button class="btn btn-default close" ng-click="s.cancel()"><span aria-hidden="true">×</span></button>
+	<button class="btn btn-default close" ng-click="self.cancel()"><span aria-hidden="true">×</span></button>
 	<h3 class="modal-title">Add Valued Component(s)</h3>
 </div>
 
 <div class="modal-body">
-	<section class="panel panel-default">
-		<table class="table add-valued-component-table" ng-table="self.tableParams" show-filter="self.showFilter">
+	<section class="panel panel-default no-margin add-vc-table">
+		<table class="table table-scroll add-valued-component-table" ng-table="self.tableParams" show-filter="self.showFilter">
 			<tr ng-repeat="o in $data">
-				<td class="select-col" header-class="'select-col'"
-					data-title="'Name'"
+				<td data-title="'Name'"
 					sortable="'name'"
 					filter="{'name':'text'}"><input type="checkbox" ng-click="self.toggleItem(o)"/>{{o.name}}</td>
-				<td data-title="'Pillar'"
+				<td class="pillar-col" header-class="'pillar-col'" data-title="'Pillar'"
 					sortable="'pillar'"
 					filter="{'pillar':'select'}"
 					filter-data="self.pillars">{{o.pillar}}</td>
