--- a/modules/documents/client/views/partials/document-browser.html
+++ b/modules/documents/client/views/partials/document-browser.html
@@ -149,7 +149,7 @@
 						Recent Documents
 					</li>
 				</ul>
-				<div class="file-browser-category" ng-if="environment === 'EAO'">Legacy Documents</div>
+				<div class="file-browser-category" ng-if="environment === 'EAO'">Documents</div>
 				<ul>
 					<li class="row-folder clickable row-folder-depth-{{ row.depth }}" ng-class="{'active btn-primary': docBrowser.filterDocsSelected(row)}"
 						ng-click="docBrowser.filterList(row)"
