Allow authenticated user not on a project to have the same menu as a public user (Documents, Comment Periods, Valued Components).

--- a/modules/core/client/views/menu.client.view.html
+++ b/modules/core/client/views/menu.client.view.html
@@ -10,9 +10,9 @@
 		</a>
 
 		<ul class="nav nav-pills nav-stacked">
-			<li><a ui-sref="p.detail" href title="Project Details">Project Details</a></li>
      		<li><a ui-sref="p.documents" href title="Documents">Documents</a></li>
      		<li><a ui-sref="p.commentperiod.list" href title="Public Comment Periods">Public Comment Periods</a></li>
+        <li><a ui-sref="p.vc.list" href title="Valued Components">Valued Components</a></li>
 		</ul>
 	</div><!-- / PUBLIC USERS (COMMON) -->
 
