--- a/modules/vcs/client/views/vc-edit.html
+++ b/modules/vcs/client/views/vc-edit.html
@@ -2,6 +2,8 @@
 <div class="view-title-container flex-row">
 	<h1><span ng-show="project.name">Edit Valued Component &nbsp;&rsaquo;&nbsp; {{vc.title}}</h1>
 	<div class="actions">
+    <a ng-if="canUnpublish" class="btn btn-primary btn-sm" href ng-click="unpublish()">Unpublish</a>
+    <a  ng-if="canPublish" class="btn btn-primary btn-sm" href ng-click="publish()">Publish</a>
 		<a class="btn btn-default btn-sm" ui-sref="p.vc.list">Cancel</a>
 		<a class="btn btn-primary btn-sm" href ng-click="save()">Save</a>
 	</div>
@@ -86,7 +88,7 @@
 	</div><!-- / HIDDEN -->
 
 	<tmpl-artifact-display x-mode="'edit'" x-artifact="vc.artifact" x-project="project"></tmpl-artifact-display>
-	
+
 </div><!-- / VIEW BODY CONTAINER -->
-	
+
 
