--- a/modules/vcs/client/views/vc-list.html
+++ b/modules/vcs/client/views/vc-list.html
@@ -6,7 +6,7 @@
 <div class="view-body-container">
 	<div class="button-bar clearfix">
 		<div class="pull-left">
-			<button class="btn btn-default btn-sm" ui-sref="p.vc.list" ng-click="openAddTopic()">
+			<button ng-if="project.userCan.createValuedComponent" class="btn btn-default btn-sm" ui-sref="p.vc.list" ng-click="openAddTopic()">
 				<span class="glyphicon glyphicon-plus"></span><span>Add Valued Component</span>
 			</button>
 		</div>
